567(fix): Fix off center tiles in mobile landing view

--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -1,37 +1,31 @@
 .landing {
   display: flex;
   flex-direction: column;
-  font-family: sans-serif;
-  font-size: 1.2em;
-  letter-spacing: 1rem;
-  text-align: center;
+  font-family: monospace;
+  font-size: 1.5rem;
+  letter-spacing: .3rem;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .header {
-  display: grid;
-  grid-template-rows: repeat(3, .5fr);
-  grid-gap: 1rem;
-  justify-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 1rem;
 }
 
-.my-name {
+.myName {
   font-size: 4rem;
 }
 
-.about-me {
-  width: 60%;
-  letter-spacing: 0rem;
-  line-height: 1.5rem;
+.jobTitle {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-@media (max-width: 768px) {
-  .about-me {
-    width: 90%;
-  }
-}
 
 .social {
   display: grid;
@@ -49,14 +43,21 @@
   border: none;
   height: .1rem;
   background-color: #000;
-  width: 20rem;
+  width: 5rem;
 }
 
-.section-header {
-  margin-top: 2rem;
+.projectHeader {
+  margin-bottom: 0;
+  font-weight: normal;
 }
 
-.projects-container {
+.projectsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.projectCards {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
